[package]
name = "wavepop"
version = "0.1.0"
authors = ["whybin <31753349+whybin@users.noreply.github.com>"]

[dependencies]
hound = "3.3.0"
rustfft = "2"
suffix = "1"
rodio = "0.5.2"
svg = "0.5.10"
image = "0.18.0"
nsvg = "0.3.0"
rand = "0.4.2"
gfx_device_gl = "0.15.0"
piston_window = "0.75.0"
piston2d-graphics = "0.24.0"
